Wip 06 complete step 3 (#6)
* reafctor: recursive consuming all people form SWAPI, impelemnted custom pagination

* reafctor: paginator moved to utils

* reafctor: paginator moved to utils

* reafctor: returned to MVC(D) structure

* feat: applied sorting Alphabetically (name property) and acending / decening filter

* feat: applied sorting Alphabetically (name property) and acending / decening filter
